--- a/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/728x90/z728x90.html
+++ b/M/Microsoft/MicrosoftAzure/Base_Template_V4/ads/728x90/z728x90.html
@@ -115,6 +115,7 @@
           case 'Illustration_ML' :
           case 'Illustration_Migration' :
           case 'Illustration_OpenSource' :
+          case 'Illustration_VM' :
           case 'Lifestyle_Male' :
           case 'Lifestyle_Female' :
           case 'UI_AI' :
@@ -122,7 +123,8 @@
           case 'UI_Hybrid' :
           case 'UI_ML' :
           case 'UI_Migration' :
-          case 'UI_OpenSource' : adURL = 'Base/Template_V4_Illustration_728x90.htm';break;
+          case 'UI_OpenSource' :
+          case 'UI_VM' : adURL = 'Base/Template_V4_Illustration_728x90.htm';break;
           // case 'Migration' : adURL = 'Migration/Template_V4_Illustration_728x90.htm';break;
           // case 'Open Source' : adURL = 'Open Source/Template_V4_Illustration_728x90.htm';break;
         }
