--- a/M/Microsoft/MicrosoftAzure/MicrosoftAzure_Free Account/ads.html
+++ b/M/Microsoft/MicrosoftAzure/MicrosoftAzure_Free Account/ads.html
@@ -129,6 +129,7 @@
       var getCAMData = function(data) {
           var templates = {
             'Simplified': `var cam = {
+              backgroundImage: "../../assets/" + data.backgroundImage,
               headline: data.headline,
               subHeadline: data.subHeadline,
               ctaText: data.ctaText,
