--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x250/EpicMountainRewards/300x250_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x250/EpicMountainRewards/300x250_EpicMountainRewards.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: AvenirNextBold;
-          src: url('fonts/AvenirNextBold.woff') format("woff");
+          font-family: BrandonGrotesque-Bold;
+          src: url('fonts/BrandonGrotesque-Bold.woff') format("woff");
       }
-      .AvenirNextBold { font-family: AvenirNextBold; }
+      .BrandonGrotesque-Bold { font-family: BrandonGrotesque-Bold; }
 
     </style>
     <style media="screen" data-dynamic="style">
@@ -23,7 +23,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #99bbd5;
+        color: #fff;
         background-color: #fff;
       }
       .frame {
@@ -47,7 +47,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text-left AvenirNextBold"
+      <div id="frameText1" class="text-left BrandonGrotesque-Bold"
         data-text="frameText1"
         style="top: 171px;
           left: 11px;
@@ -56,7 +56,7 @@
           font-size: 15px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text-left AvenirNextBold"
+      <div id="frameText2" class="text-left BrandonGrotesque-Bold"
         data-text="frameText2"
         style="top: 171px;
           left: 11px;
@@ -65,7 +65,7 @@
           font-size: 15px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text-left AvenirNextBold"
+      <div id="frameText3" class="text-left BrandonGrotesque-Bold"
         data-text="frameText3"
         style="top: 171px;
           left: 11px;
@@ -74,7 +74,7 @@
           font-size: 15px;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text AvenirNextBold"
+      <div id="cta" class="text BrandonGrotesque-Bold"
         data-text="ctaText"
         data-style="padding:1px 10px 0px;"
         style="top: 194px;
@@ -89,7 +89,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="AvenirNextBold">AvenirNextBold</div>
+      <div class="BrandonGrotesque-Bold">BrandonGrotesque-Bold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
