--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x600/EpicMountainRewards/300x600_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x600/EpicMountainRewards/300x600_EpicMountainRewards.htm
@@ -10,10 +10,10 @@
     <script type="text/javascript" src="js/script.min.js"></script>
     <style media="screen">
       @font-face {
-          font-family: AvenirNextBold;
-          src: url('fonts/AvenirNextBold.woff') format("woff");
+          font-family: BrandonGrotesque-Bold;
+          src: url('fonts/BrandonGrotesque-Bold.woff') format("woff");
       }
-      .AvenirNextBold { font-family: AvenirNextBold; }
+      .BrandonGrotesque-Bold { font-family: BrandonGrotesque-Bold; }
 
     </style>
     <style media="screen" data-dynamic="style">
@@ -23,7 +23,7 @@
         font-family: arial,sans-serif;
         font-weight: 900;
         font-style: normal;
-        color: #99bbd5;
+        color: #fff;
         background-color: #fff;
       }
       .frame {
@@ -47,7 +47,7 @@
       <div id="logoImage" class="asset frame" data-image="logoImage"></div>
       <div id="saleImage" class="asset frame" data-image="saleImage" style="display:none;"></div>
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
-      <div id="frameText1" class="text AvenirNextBold"
+      <div id="frameText1" class="text BrandonGrotesque-Bold"
         data-text="frameText1"
         data-style="text-align:center;"
         style="top: 464px;
@@ -57,7 +57,7 @@
           font-size: 25px;
           line-height: 1.15;">
       </div>
-      <div id="frameText2" class="text AvenirNextBold"
+      <div id="frameText2" class="text BrandonGrotesque-Bold"
         data-text="frameText2"
         data-style="text-align:center;"
         style="top: 464px;
@@ -67,7 +67,7 @@
           font-size: 25px;
           line-height: 1.15;">
       </div>
-      <div id="frameText3" class="text AvenirNextBold"
+      <div id="frameText3" class="text BrandonGrotesque-Bold"
         data-text="frameText3"
         data-style="text-align:center;"
         style="top: 464px;
@@ -77,7 +77,7 @@
           font-size: 25px;
           line-height: 1.15;">
       </div>
-      <div id="cta" class="text AvenirNextBold"
+      <div id="cta" class="text BrandonGrotesque-Bold"
         data-text="ctaText"
         data-style="padding:0 12px 0px;"
         style="top: 542px;
@@ -92,7 +92,7 @@
       <div id="overlay" style="top:0px;left:0px;width:inherit;height:inherit;background-color:#fff;opacity:1;-webkit-transition:all ease .5s;transition:all ease .5s;"></div>
     </div>
     <div id="loadFont" style="width:0;height:0;overflow:hidden;">
-      <div class="AvenirNextBold">AvenirNextBold</div>
+      <div class="BrandonGrotesque-Bold">BrandonGrotesque-Bold</div>
     </div>
     <script type="text/javascript">
       var layout = 'standard';
