Fixed letter spacing

--- a/E/Epic/Vail_Resort_Template(T10)/ads/970x250/EpicMountainRewards/970x250_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/970x250/EpicMountainRewards/970x250_EpicMountainRewards.htm
@@ -54,6 +54,7 @@
           width: 320px;
           height: 105px;
           font-size: 28px;
+          letter-spacing: 2px;
           line-height: 1.13;">
       </div>
       <div id="frameText2" class="text-left BrandonGrotesque-Bold"
@@ -63,6 +64,7 @@
           width: 320px;
           height: 105px;
           font-size: 28px;
+          letter-spacing: 2px;
           line-height: 1.13;">
       </div>
       <div id="frameText3" class="text-left BrandonGrotesque-Bold"
@@ -72,6 +74,7 @@
           width: 320px;
           height: 105px;
           font-size: 28px;
+          letter-spacing: 2px;
           line-height: 1.13;">
       </div>
       <div id="cta" class="text BrandonGrotesque-Bold"
