--- a/E/Epic/Vail_Resort_Template(T10)/ads/160x600/EpicMountainRewards/160x600_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/160x600/EpicMountainRewards/160x600_EpicMountainRewards.htm
@@ -55,6 +55,7 @@
           width: 130px;
           height: 90px;
           font-size: 18px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text BrandonGrotesque-Bold"
@@ -65,6 +66,7 @@
           width: 130px;
           height: 90px;
           font-size: 18px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text BrandonGrotesque-Bold"
@@ -75,6 +77,7 @@
           width: 130px;
           height: 90px;
           font-size: 18px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text BrandonGrotesque-Bold"
