--- a/E/Epic/Vail_Resort_Template(T10)/ads/300x250/EpicMountainRewards/300x250_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/300x250/EpicMountainRewards/300x250_EpicMountainRewards.htm
@@ -49,29 +49,32 @@
       <!-- <div id="ref" class="asset frame" data-image="ref"></div> -->
       <div id="frameText1" class="text-left BrandonGrotesque-Bold"
         data-text="frameText1"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
+        style="top: 176px;
+          left: 5px;
+          width: 190px;
+          height: 60px;
           font-size: 20px;
+          letter-spacing: 2px;
           line-height: 1;">
       </div>
       <div id="frameText2" class="text-left BrandonGrotesque-Bold"
         data-text="frameText2"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
+        style="top: 176px;
+          left: 5px;
+          width: 190px;
+          height: 60px;
           font-size: 20px;
+          letter-spacing: 2px;
           line-height: 1;">
       </div>
       <div id="frameText3" class="text-left BrandonGrotesque-Bold"
         data-text="frameText3"
-        style="top: 171px;
-          left: 11px;
-          width: 180px;
-          height: 70px;
+        style="top: 176px;
+          left: 5px;
+          width: 190px;
+          height: 60px;
           font-size: 20px;
+          letter-spacing: 2px;
           line-height: 1;">
       </div>
       <div id="cta" class="text BrandonGrotesque-Bold"
@@ -155,10 +158,10 @@
                 cta.dataset.style = 'padding:0px 10px 0px;';
                 var frameText = document.querySelectorAll("div[id^=frameText]");
                 for (var i = 0; i < frameText.length; i++){
-                  frameText[i].style.top = '166px';
-                  frameText[i].style.left = '10px';
-                  frameText[i].style.width = '280px';
-                  frameText[i].style.height = '50px';
+                  frameText[i].style.top = '170px';
+                  frameText[i].style.left = '5px';
+                  frameText[i].style.width = '290px';
+                  frameText[i].style.height = '42px';
                   frameText[i].style.textAlign = 'center';
                 }
               } else if(layout == 'multipleimagesoffer') {
