--- a/E/Epic/Vail_Resort_Template(T10)/ads/320x50/EpicMountainRewards/320x50_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/320x50/EpicMountainRewards/320x50_EpicMountainRewards.htm
@@ -54,6 +54,7 @@
           width: 82px;
           height: 44px;
           font-size: 10px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left BrandonGrotesque-Bold"
@@ -63,6 +64,7 @@
           width: 82px;
           height: 44px;
           font-size: 10px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left BrandonGrotesque-Bold"
@@ -72,6 +74,7 @@
           width: 82px;
           height: 44px;
           font-size: 10px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text BrandonGrotesque-Bold"
