--- a/E/Epic/Vail_Resort_Template(T10)/ads/728x90/EpicMountainRewards/728x90_EpicMountainRewards.htm
+++ b/E/Epic/Vail_Resort_Template(T10)/ads/728x90/EpicMountainRewards/728x90_EpicMountainRewards.htm
@@ -54,6 +54,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="frameText2" class="text-left BrandonGrotesque-Bold"
@@ -63,6 +64,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="frameText3" class="text-left BrandonGrotesque-Bold"
@@ -72,6 +74,7 @@
           width: 170px;
           height: 80px;
           font-size: 21px;
+          letter-spacing: 2px;
           line-height: 1.1;">
       </div>
       <div id="cta" class="text BrandonGrotesque-Bold"
