--- a/H/Hilton/Hilton_New_2020_Template/ads.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads.html
@@ -14,6 +14,8 @@
       }
       #headerContainer, #header, #subheader{
         text-align: center;
+        font-size: 14px;
+        font-weight: bold;
       }
       #header .image-container {
         display: inline-block;
