--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -261,7 +261,7 @@
             }
           ],
           staticData: {
-            // ref:'ref.png',
+            // ref:'160x600.png',
             layout: 'homepage',
           },
           beforeLoad: function(data){
