--- a/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
@@ -260,7 +260,7 @@
             }
           ],
           staticData: {
-            // ref:'ref.png',
+            // ref:'300x600.png',
             layout: 'generic',
           },
           beforeLoad: function(data){
