--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -259,7 +259,7 @@
           ],
           staticData: {
             layout: 'generic',
-            // ref:'ref.png',
+            // ref:'728x90.png',
           },
           beforeLoad: function(data){
             var replaceMacro = function(text, data) {
