fixed line spacing

--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -198,7 +198,7 @@
         style="top: 13px;
           left: 15px;
           width: 260px;
-          height: 100px;
+          height: px;
           font-size: 24px;
           line-height: 1;
           color:#FFFFFF;">
@@ -260,7 +260,7 @@
             }
           ],
           staticData: {
-            // ref:'300x250.png',
+            ref:'300x250.png',
             layout: 'homepage',
           },
           beforeLoad: function(data){
