Fixed hampton logo

--- a/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/160x600/160x600.html
@@ -261,7 +261,7 @@
             }
           ],
           staticData: {
-            // ref:'160x600.png',
+            // ref:'ref.png',
             layout: 'homepage',
           },
           beforeLoad: function(data){
@@ -342,7 +342,7 @@
                     document.querySelector("#ad").style.fontFamily = "AvenirNextBold";
                   }else if(hiltonGardenCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'hgi';
-                    document.querySelector("#logoImage").style.top = '406px';
+                    document.querySelector("#logoImage").style.top = '412px';
 
                     document.querySelector("#ad").style.fontFamily = "BreeSerifEb";
                   }else if(hamptonCodes.indexOf(matchingCodes[matchIndex]) != -1){
