--- a/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x600/300x600.html
@@ -260,7 +260,7 @@
             }
           ],
           staticData: {
-            // ref:'300x600.png',
+            // ref:'ref.png',
             layout: 'generic',
           },
           beforeLoad: function(data){
@@ -358,7 +358,7 @@
                     }
                   }else if(homewoodCodes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'homewood';
-                    document.querySelector("#logoImage").style.top = '406px';
+                    document.querySelector("#logoImage").style.top = '412px';
 
                     document.querySelector("#ad").style.fontFamily = "BrandonGrotesqueBlack";
                   }else if(home2Codes.indexOf(matchingCodes[matchIndex]) != -1){
