--- a/H/Hilton/Hilton_New_2020_Template/ads.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads.html
@@ -47,6 +47,7 @@
         margin-right: -1px;
         color:#333;
         text-align: center;
+        font-size: 8px;
         /* -webkit-transition: all ease-out 0.2s;
         transition: all ease-out 0.2s; */
         cursor: pointer;
@@ -210,7 +211,7 @@
         var layoutName = "adContent.name";
         location.hash = btoa(country+'|'+layoutName).replace('==','');
         htmlContent += adData.map(function(data){
-          return '<div '+(country == data.name ? 'class="selected"' : '')+' data-id="' + data.name + '" style="text-align: center;border: 1px solid #000;"><img src="assets/0LogoIcons/' + data.data[0].data[0]['Preview Logos'] + '" style="width: 80px;" /><div style="padding:5px 0;border-top: 1px solid;">'+data.name + '</div></div>'
+          return '<div '+(country == data.name ? 'class="selected"' : '')+' data-id="' + data.name + '" style="text-align: center;border: 1px solid #000;"><img src="assets/0LogoIcons/' + data.data[0].data[0]['Preview Logos'] + '" style="width: 70px;" /><div style="padding:5px 0;border-top: 1px solid;">'+data.name + '</div></div>'
         }).join('');
         document.querySelector('#header').innerHTML = htmlContent;
         htmlContent = '';
