--- a/H/Hilton/Hilton_New_2020_Template/ads.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads.html
@@ -2,7 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Ads</title>
+    <link rel="icon" href="https://www.adobe.com/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://www.adobe.com/favicon.ico" type="image/x-icon">
+    <title>Adobe: Advertising Preview Page</title>
     <style media="screen">
       body {
         min-width: 1024px;
