--- a/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/300x250/300x250.html
@@ -198,7 +198,7 @@
         style="top: 13px;
           left: 15px;
           width: 260px;
-          height: px;
+          height: 100px;
           font-size: 24px;
           line-height: 1;
           color:#FFFFFF;">
