--- a/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
+++ b/H/Hilton/Hilton_New_2020_Template/ads/728x90/728x90.html
@@ -120,6 +120,12 @@
           src: url('fonts/BrandonGrotesque-BoldItalic.woff') format("woff");
       }
       .BrandonGrotesqueBoldItalic { font-family: BrandonGrotesqueBoldItalic; }
+
+      @font-face {
+          font-family: FeijoaDisplay;
+          src: url('fonts/Feijoa-Display.woff') format("woff");
+      }
+      .FeijoaDisplay { font-family: FeijoaDisplay; }
     </style>
     <!--
       Available Classes:-
@@ -369,7 +375,7 @@
                     document.querySelector("#logoImage").style.left = '476px';
                     document.querySelector("#logoImage").style.top = '-5px';
 
-                    document.querySelector("#ad").style.fontFamily = "BrandonGrotesqueBlack";
+                    document.querySelector("#ad").style.fontFamily = "FeijoaDisplay";
                   }else if(home2Codes.indexOf(matchingCodes[matchIndex]) != -1){
                     logoImageName = 'home2';
                     document.querySelector("#logoImage").style.top = '3px';
