--- a/E/Epic/EpicPass_Template_15/ads.html
+++ b/E/Epic/EpicPass_Template_15/ads.html
@@ -226,14 +226,13 @@
       var getCAMData = function(data) {
           var templates = {
             'ad': `var cam = {
-              Frame_1_LogoImage: "../../assets/" + data.Frame_1_LogoImage,
-              Frame_2_BgImage: "../../assets/" + data.Frame_2_BgImage,
-              Frame_2_LogoImage: "../../assets/" + data.Frame_2_LogoImage,
-              Frame_3_BgImage: "../../assets/" + data.Frame_3_BgImage,
-              Frame_3_LogoImage: "../../assets/" + data.Frame_3_LogoImage,
-              Frame_2_Text: data.Frame_2_Text,
-              Frame_3_Text: data.Frame_3_Text,
-              Frame_4_Text: data.Frame_4_Text,
+              introLogoImage: "../../assets/" + data.introLogoImage,
+              logoImage: "../../assets/" + data.logoImage,
+              frameVideo2: "../../assets/" + data.frameVideo2,              
+              frameVideo3: "../../assets/" + data.frameVideo3,
+              frameText2: data.frameText2,
+              frameText3: data.frameText3,
+              frameText4: data.frameText4,
               ctaText: data.ctaText,
               ctaBtnColor: data.ctaBtnColor,
               clickURL: data.clickURL,
